Upload new resume link

--- a/generic.html
+++ b/generic.html
@@ -27,7 +27,7 @@
 						<ul class="links">
 							<li><a href="index.html">Projects</a></li>
 							<li class="active"><a href="generic.html">About Maddy</a></li>
-							<li><a href="https://github.com/Maddy-analyst-125/Resume/blob/main/Hien-Duc-Dang_Data-Analyst.pdf">Resume</a></li>
+							<li><a href="https://maddy-analyst-125.github.io/Resume/Hien-Duc-Dang_Data-Analyst.pdf">Resume</a></li>
 						</ul>
 						<ul class="icons">
 							<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
