--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 						<ul class="links">
 							<li class="active"><a href="index.html">Projects</a></li>
 							<li><a href="generic.html">About Maddy</a></li>
-							<li><a href="https://github.com/Maddy-analyst-125/Resume/blob/main/Hien-Duc-Dang_Data-Analyst.pdf">Resume</a></li>
+							<li><a href="https://maddy-analyst-125.github.io/Resume/Hien-Duc-Dang_Data-Analyst.pdf">Resume</a></li>
 						
 						</ul>
 						<ul class="icons">
