--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 									<a href="https://public.tableau.com/app/profile/maddy.dang" class="image fit"><img src="images/tab.png" alt="" /></a>
 									<p>Tableau Dashboard for analyzing financial complaints of a banking application </p>
 									<ul class="actions special">
-										<li><a href="#" target="_blank" class="button">View Project</a></li>
+										<li><a href="https://public.tableau.com/app/profile/maddy.dang" target="_blank" class="button">View Project</a></li>
 									</ul>
 								</article>
 								</section>
